--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="card-body">
                     <h3 class="text-center">Luffy merchandise</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio aliquid nihil minus autem nam rerum quam aut sunt, qui unde vitae illum, ipsum quas, minima sequi dignissimos quod culpa iusto.</p>
-                    <div class="star">
+                    <div class="star text-center">
                       <i class="bi-solid bi-star-fill checked"></i>
                       <i class="bi-solid bi-star-fill checked"></i>
                       <i class="bi-solid bi-star-fill checked"></i>
@@ -108,6 +108,26 @@
             </div>
         </div>
     </div>
+    <div class="col-md-3 py-3 py-md-0">
+      <div class="card">
+          <img src="https://i.postimg.cc/B62HSgjB/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-3-768x768.jpg"alt="">
+          <div class="card-body">
+              <h3 class="text-center">Luffy merchandise</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio aliquid nihil minus autem nam rerum quam aut sunt, qui unde vitae illum, ipsum quas, minima sequi dignissimos quod culpa iusto.</p>
+              <div class="star text-center">
+                <i class="bi-solid bi-star-fill checked"></i>
+                <i class="bi-solid bi-star-fill checked"></i>
+                <i class="bi-solid bi-star-fill checked"></i>
+                <i class="bi-solid bi-star-fill checked"></i>
+                <i class="bi-solid bi-star-fill checked"></i>
+              </div>
+          </div>
+          <h2>R200 <span>
+            <li class="bi bi-cart-fill"></li>
+          </span></h2>
+      </div>
+  </div>
+</div>
 </section>
 
 
@@ -190,7 +210,6 @@ View more
 </section>
 <section id="product" class="container bg-success">
     <img src="https://i.postimg.cc/MZ9Vv2b9/one-piece-zoro-jordan-sneakers-boots-three-swords-skill-anime-sneakers-gearanime-3.jpg" alt="Nike" width="200"> -->
-    Button trigger modal
 <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Modal">
 View more
 </button> -->
