--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Product</a>
+            <a class="nav-link" href="html/Admin.html">Admin</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -52,15 +52,14 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="html/about.html">About</a>
+            <a class="nav-link" href="html/products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="html/contact.html">Contact</a>
+            <a class="nav-link" href="html/Checkout.html">Checkout</a>
           </li>
         </ul>
         <form class="d-flex" id="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -83,178 +82,6 @@
 </div>
 </section>
 <!-- home content -->
-
-<!-- product cards -->
-<section class="container" id="product-cards">
-    <h1 class="text-center">PRODUCTS</h1>
-    <div class="row" style="margin-top: 30px">
-        <div class="col-md-3 py-3 py-md-0">
-            <div class="card">
-                <img src="https://i.postimg.cc/B62HSgjB/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-3-768x768.jpg"alt="">
-                <div class="card-body">
-                    <h3 class="text-center">Luffy merchandise</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio aliquid nihil minus autem nam rerum quam aut sunt, qui unde vitae illum, ipsum quas, minima sequi dignissimos quod culpa iusto.</p>
-                    <div class="star text-center">
-                      <i class="bi-solid bi-star-fill checked"></i>
-                      <i class="bi-solid bi-star-fill checked"></i>
-                      <i class="bi-solid bi-star-fill checked"></i>
-                      <i class="bi-solid bi-star-fill checked"></i>
-                      <i class="bi-solid bi-star-fill checked"></i>
-                    </div>
-                </div>
-                <h2>R200 <span>
-                  <li class="bi bi-cart-fill"></li>
-                </span></h2>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3 py-3 py-md-0">
-      <div class="card">
-          <img src="https://i.postimg.cc/B62HSgjB/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-3-768x768.jpg"alt="">
-          <div class="card-body">
-              <h3 class="text-center">Luffy merchandise</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio aliquid nihil minus autem nam rerum quam aut sunt, qui unde vitae illum, ipsum quas, minima sequi dignissimos quod culpa iusto.</p>
-              <div class="star text-center">
-                <i class="bi-solid bi-star-fill checked"></i>
-                <i class="bi-solid bi-star-fill checked"></i>
-                <i class="bi-solid bi-star-fill checked"></i>
-                <i class="bi-solid bi-star-fill checked"></i>
-                <i class="bi-solid bi-star-fill checked"></i>
-              </div>
-          </div>
-          <h2>R200 <span>
-            <li class="bi bi-cart-fill"></li>
-          </span></h2>
-      </div>
-  </div>
-</div>
-</section>
-
-
-
-
-
-
-
-
-
-
-<!-- <section id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://i.postimg.cc/B62HSgjB/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-3-768x768.jpg" class="d-block w-25" alt="sneakers">
-      </div>
-      <div class="carousel-item">
-        <img src="https://i.postimg.cc/kGr7F0vW/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-2-768x768.jpg" class="d-block w-25" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://i.postimg.cc/Hx96B5Q3/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-768x768.jpg" class="d-block w-25" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-</section> -->
-<!-- <section id="product" class="container bg-danger">
-    <h2 class="display-2">Product</h2>
-    <img src="https://i.postimg.cc/B62HSgjB/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-3-768x768.jpg" alt="Nike" width="200"> -->
-    <!-- Button trigger modal -->
-<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-View more
-</button> -->
-<!-- Modal -->
-<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-<div class="modal-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h1 class="modal-title fs-5" id="exampleModalLabel">Luffy Jordans</h1>
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <li class="carousel-item active" data-bs-interval="10000">
-                <img src="https://i.postimg.cc/kGr7F0vW/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-2-768x768.jpg" class="d-block w-100" alt="...">
-                <p>All of our One Piece Jordan Shoes like Jordan styles are custom-made-to-order and handcrafted to the highest quality standards.</p>
-              </div>
-              <div class="carousel-item" data-bs-interval="20000">
-                <img src="https://i.postimg.cc/Hx96B5Q3/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-768x768.jpg" class="d-block w-100" alt="...">
-              </div>
-
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-    </div>
-    <div class="modal-body">
-        <img src="" alt="">
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary">Save changes</button>
-    </div>
-  </div>
-</div>
-</div>
-</section>
-<section id="product" class="container bg-success">
-    <img src="https://i.postimg.cc/MZ9Vv2b9/one-piece-zoro-jordan-sneakers-boots-three-swords-skill-anime-sneakers-gearanime-3.jpg" alt="Nike" width="200"> -->
-<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Modal">
-View more
-</button> -->
-<!-- Modal -->
-<!-- <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="Modal" aria-hidden="true">
-<div class="modal-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h1 class="modal-title fs-5" id="Modal">Zoro's Jordans</h1>
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-    <div id="ExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <li class="carousel-item active" data-bs-interval="10000">
-                <img src="https://i.postimg.cc/59zjWhKH/one-piece-zoro-jordan-sneakers-boots-three-swords-skill-anime-sneakers-gearanime-768x768.jpg" class="d-block w-100" alt="...">
-                <p>All of our One Piece Jordan Shoes like Jordan styles are custom-made-to-order and handcrafted to the highest quality standards.</p>
-              </div>
-              <div class="carousel-item" data-bs-interval="20000">
-                <img src="https://i.postimg.cc/Hx96B5Q3/luffy-jordan-sneakers-one-piece-anime-shoes-for-fan-mn06-gearanime-768x768.jpg" class="d-block w-100" alt="...">
-              </div>
-
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-    </div>
-    <div class="modal-body">
-        <img src="" alt="">
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary">Save changes</button>
-    </div>
-  </div>
-</div>
-</div>
-</section> -->
-<!-- product cards -->
 <footer>
     Copyrite &copy; 2022
 </footer>
