--- a/html/products.html
+++ b/html/products.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"id="logo"><img src="https://i.postimg.cc/wMGsjmTV/one-piece-logo-7.png" class="img-fluid" alt="logo" width="150px" height="150px"></a>
+          <a class="navbar-brand" href="index.html"id="logo"><img src="/assets/one-piece-store-png-1024x427.png" class="img-fluid" alt="logo" width="150px" height="150px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span img src="..." alt="" width="30px"></span>
             <!-- https://i.postimg.cc/G3Q248bb/1882f7e15ce3a8c9db2c43d07c5fb247.jpg -->
@@ -113,9 +113,9 @@
               </div>
               <div class="col-md-3 py-3 py-md-0">
                 <div class="card">
-                    <img src="/assets/zoro-yeezy-shoes-one-piece-anime-shoes-fan-gift-tt04-gearanime-2-768x768.jpg"alt="">
+                    <img src="/assets/0x1080@1657899825cb4b302498.webp"alt="">
                     <div class="card-body">
-                        <h3 class="text-center">Zoro yeezees</h3>
+                        <h3 class="text-center">Jinb Jordans</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio aliquid nihil minus autem nam rerum quam aut sunt, qui unde vitae illum, ipsum quas, minima sequi dignissimos quod culpa iusto.</p>
                         <div class="star text-center">
                           <i class="bi-solid bi-star-fill checked"></i>
