--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!--navbar-->
 <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"id="logo"><img src="https://i.postimg.cc/wMGsjmTV/one-piece-logo-7.png" class="img-fluid" alt="logo" width="150px" height="150px"></a>
+      <a class="navbar-brand" href="index.html"id="logo"><img src="/assets/one-piece-store-png-1024x427.png" class="img-fluid" alt="logo" width="150px" height="150px"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span img src="..." alt="" width="30px"></span>
         <!-- https://i.postimg.cc/G3Q248bb/1882f7e15ce3a8c9db2c43d07c5fb247.jpg -->
