--- a/html/products.html
+++ b/html/products.html
@@ -115,7 +115,7 @@
                 <div class="card">
                     <img src="/assets/0x1080@1657899825cb4b302498.webp"alt="">
                     <div class="card-body">
-                        <h3 class="text-center">Jinb Jordans</h3>
+                        <h3 class="text-center">Jimbe Jordans</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio aliquid nihil minus autem nam rerum quam aut sunt, qui unde vitae illum, ipsum quas, minima sequi dignissimos quod culpa iusto.</p>
                         <div class="star text-center">
                           <i class="bi-solid bi-star-fill checked"></i>
@@ -132,5 +132,36 @@
             </div>
         </div>
     </section>   
+
+
+
+
+    <!-- other cards -->
+    <div class="container" id="other-cards">
+      <div class="row">
+        <div class="col-md-6 py-3 py-md-0">
+          <div class="card">
+            <img src="..." alt="...">
+            <div class="card-img-overlay">
+              <h3>Best Sneakers</h3>
+              <h5>Latest Collections</h5>
+              <p>Up to 50% off</p>
+              <button id="Shopnow">Shop Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 py-3 py-md-0">
+          <div class="card">
+            <img src="..." alt="...">
+            <div class="card-img-overlay">
+              <h3>Best Hoodies</h3>
+              <h5>Latest Collections</h5>
+              <p>Up to 50% off</p>
+              <button id="Shopnow">Shop Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
