--- a/html/products.html
+++ b/html/products.html
@@ -141,9 +141,9 @@
       <div class="row">
         <div class="col-md-6 py-3 py-md-0">
           <div class="card">
-            <img src="..." alt="...">
+            <img src="/assets/151409a9f6f7aef3551be636e2157406_front_59.jpg" alt="...">
             <div class="card-img-overlay">
-              <h3>Best Sneakers</h3>
+              <h3>Luffy T-shirt</h3>
               <h5>Latest Collections</h5>
               <p>Up to 50% off</p>
               <button id="Shopnow">Shop Now</button>
@@ -152,7 +152,7 @@
         </div>
         <div class="col-md-6 py-3 py-md-0">
           <div class="card">
-            <img src="..." alt="...">
+            <img src="/assets/Dracule-Mihawk-Sweatshirts-Anime-One-Piece-3D-Hoodie-Cosplay-costume-zipper-Yellow-Thin-Pullover-Hoodies-Tops.jpg_Q90.jpg_.webp" alt="...">
             <div class="card-img-overlay">
               <h3>Best Hoodies</h3>
               <h5>Latest Collections</h5>
