--- a/html/products.html
+++ b/html/products.html
@@ -163,5 +163,24 @@
         </div>
       </div>
     </div>
+    <section>
+     <!-- banner -->
+     <div class="banner">
+      <div class="content">
+        <h1><span>One Piece Merchendice</span>
+        <br>
+        Up to <span id="span2">50%</span> off
+        </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cupiditate expedita ipsa facere ad esse consequatur voluptate. Hic doloremque ipsa,
+          <br> dicta quis similique iure voluptatum tempore dolores, sapiente voluptatem consequuntur?
+        </p>
+        <div class="btn"><button>Shop Now</button></div>
+      
+
+      </div>
+     </div class="img">
+    <img src="" alt="">
+    </section>
+     <!-- end banner -->
 </body>
 </html>
