--- a/html/Admin.html
+++ b/html/Admin.html
@@ -51,6 +51,21 @@
         </div>
       </nav>
       <!-- end of nav -->
-    
+
+      <section>
+        <table class="table container-fluid mt-5">
+          <tr class="row-12">
+            <thead>
+              <th class="col-1"></th>
+              <th class="col-2"></th>
+              <th class="col-3"></th>
+              <th class="col-4"></th>
+              <th class="col-5"></th>
+              <th class="col-6"></th>
+            </thead>
+          </tr>
+        </table>
+      </section>
+    <script src="/data/products.js"></script>
 </body>
 </html>
