--- a/html/products.html
+++ b/html/products.html
@@ -181,6 +181,7 @@
      </div class="img">
     <img src="" alt="">
     </section>
+    <script src="/data/products.js"></script>
      <!-- end banner -->
 </body>
 </html>
