--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <h1><span>One Piece Merch</span>
     Up to <span id="span2">50%</span>off
     </h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos beatae commodi, nobis ducimus voluptatem perspiciatis nemo harum error qui quas praesentium! Ipsa, natus voluptatum? Modi error veritatis dicta sint illo?
-        <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet voluptatum neque recusandae incidunt eaque laudantium, distinctio quibusdam quod, ipsam veritatis accusantium, modi natus in delectus qui repellendus fugiat cumque fuga.
+    <p>Come One Come All! Get your One Piece Figurines right here at affordable prices 
+        <br>We have a variety of One Piece merchandise in the store, and we have all the latest figurines so your are never left behind when it comes to one piece items. 
     </p>
     <div class="btn"><button>Shop Now</button></div>
 </div>
