--- a/html/Admin.html
+++ b/html/Admin.html
@@ -52,19 +52,18 @@
       </nav>
 
       <div class="container">
-        <!--  Shopping cart table wrapper  -->
+
+        <!-- Shopping cart table-->
         <div id="shopping-cart">
           <div class="txt-heading">
             <h1>Shopping cart</h1>
           </div>
-          <a onClick="emptyCart()" id="btnEmpty">Empty Cart</a>
-          <table class="tbl-cart" cellpadding="10" cellspacing="1">
+          <table class="table-cart">
             <thead>
               <tr>
                 <th>Name</th>
-                <th class='text-right' width="10%">Unit Price</th>
+                <th class='text-right' width="10%">Price</th>
                 <th class='text-right' width="5%">Quantity</th>
-                <th class='text-right' width="10%">Sub Total</th>
               </tr>
             </thead>
             <!--  Cart table to load data on "add to cart" action -->
