--- a/html/products.html
+++ b/html/products.html
@@ -174,7 +174,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cupiditate expedita ipsa facere ad esse consequatur voluptate. Hic doloremque ipsa,
           <br> dicta quis similique iure voluptatum tempore dolores, sapiente voluptatem consequuntur?
         </p>
-        <div class="btn"><button>Shop Now</button></div>
+        <div class="btn"><a href="/html/Admin.html"><button>Shop Now</button></a></div>
       
 
       </div>
