--- a/html/Admin.html
+++ b/html/Admin.html
@@ -51,9 +51,9 @@
         </div>
       </nav>
 
+              <!-- Shopping cart table-->
+    <section class="admin">
       <div class="container">
-
-        <!-- Shopping cart table-->
         <div id="shopping-cart">
           <div class="txt-heading">
             <h1>Shopping cart</h1>
@@ -78,7 +78,8 @@
             </tfoot>
           </table>
         </div>
-
+      </div>
+    </section>
     <script src="/data/admin.js"></script>
 </body>
 </html>
