--- a/html/products.html
+++ b/html/products.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <title>Products</title>
 </head>
-<body>
+<body id="product">
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"id="logo"><img src="/assets/one-piece-store-png-1024x427.png" class="img-fluid" alt="logo" width="150px" height="150px"></a>
@@ -51,6 +51,7 @@
         </div>
     </nav>
       <!-- end of nav -->
+
     <section class="container" id="product-cards">
         <h1 class="text-center">PRODUCTS</h1>
         <div class="row" style="margin-top: 30px">
@@ -164,6 +165,7 @@
       </div>
     </div>
     <section>
+
      <!-- banner -->
      <div class="banner">
       <div class="content">
@@ -177,10 +179,11 @@
         <div class="btn"><a href="/html/Admin.html"><button>Shop Now</button></a></div>
       
 
-      </div>
-     </div class="img">
-    <img src="" alt="">
+        </div>
+      </div class="img">
+      <img src="" alt="">
     </section>
+
     <script src="/data/products.js"></script>
      <!-- end banner -->
 </body>
