--- a/html/products.html
+++ b/html/products.html
@@ -177,7 +177,7 @@
           <br> dicta quis similique iure voluptatum tempore dolores, sapiente voluptatem consequuntur?
         </p>
         <div class="btn"><a href="/html/Admin.html"><button>Shop Now</button></a></div>
-        <a href="https://www.youtube.com/watch?v=pNxWUfw1J_w"><button id="link">link</button></a>
+        <a href="https://www.youtube.com/watch?v=pNxWUfw1J_w" target="_blank"><button id="link">link</button></a>
       
 
         </div>
